[package]
name = "dpn-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rss = "2"
atom_syndication = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.36"
postgres = "0.19"
regex = "1"
